# alicloud-unity-demo

./: .gitignore  README.md
apm-unity-demo/Assets/Scripts/Demo/: ApmDemoActions.cs  ApmDemoBootstrap.cs  ApmDemoGame.cs  ApmDemoUI.cs
apm-unity-demo/Assets/alicloud-apm/: README.md  package.json
apm-unity-demo/Assets/alicloud-apm/Editor/: ApmAndroidGradleDependencies.cs  ApmPodSettings.cs  XcodeProjectPostProcessor.cs
apm-unity-demo/Assets/alicloud-apm/Editor/Internal/: ApmEditorLogger.cs  Il2CppArgsInjector.cs  PackageVersionGenerator.cs  XcodeProjectPostProcessor.cs
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AliHACore.xcframework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCBridge.xcframework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCBridge.xcframework/ios-arm64/AlicloudApmCBridge.framework/: AlicloudApmCBridge  Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCBridge.xcframework/ios-arm64_x86_64-simulator/AlicloudApmCBridge.framework/: AlicloudApmCBridge  Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCore.xcframework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCore.xcframework/ios-arm64/AlicloudApmCore.framework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCore.xcframework/ios-arm64_x86_64-simulator/AlicloudApmCore.framework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCrashAnalysis.xcframework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCrashAnalysis.xcframework/ios-arm64/AlicloudApmCrashAnalysis.framework/: AlicloudApmCrashAnalysis  Info.plist
apm-unity-demo/Assets/alicloud-apm/Plugins/iOS/AlicloudApmCrashAnalysis.xcframework/ios-arm64_x86_64-simulator/AlicloudApmCrashAnalysis.framework/: Info.plist
apm-unity-demo/Assets/alicloud-apm/Runtime/: Apm.cs  ApmConfiguration.cs  ApmOptions.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/CrashAnalysis/: CrashAnalysis.cs  CrashAnalysisConfiguration.cs  ExceptionModel.cs  StackFrame.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/CrashAnalysis/Internal/: CrashAnalysisComponent.cs  CrashAnalysisComponentRegistrar.cs  ExceptionConverter.cs  ExceptionHandler.cs  ExceptionPolicyHandler.cs  IPlatformCrashAnalysis.cs  InternalExceptionModel.cs  RecentExceptionDeduper.cs  StackFrameParser.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/CrashAnalysis/Internal/Logging/: CrashAnalysisLogger.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/CrashAnalysis/Internal/Platform/Android/: PlatformCrashAnalysisAndroid.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/CrashAnalysis/Internal/Platform/Fallback/: PlatformCrashAnalysisFallback.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/: ApmComponentRegistry.cs  ApmComponentRegistryFallback.cs  ApmExtConfiguration.cs  IApmComponent.cs  IPlatformApm.cs  IPlatformApmConfiguration.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Logging/: ApmLogger.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Metadata/: Metadata.cs  MetadataBuilder.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Platform/Android/: PlatformApmAndroid.cs  PlatformApmConfigurationAndroid.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Platform/Fallback/: PlatformApmConfigurationFallback.cs  PlatformApmFallback.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Platform/iOS/: IosNativeLibrary.cs  PlatformApmConfigurationIos.cs  PlatformApmIos.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Thread/: MainThreadDispatchBehaviour.cs  MainThreadHelper.cs
apm-unity-demo/Assets/alicloud-apm/Runtime/Internal/Utilities/: PackageUtility.cs
apm-unity-demo/ProjectSettings/: ProjectSettings.asset
httpdns_unity_demo/: README.md
httpdns_unity_demo/Assets/: HttpDnsAdvancedDemo.cs  HttpDnsDemo.cs  UIFontAdapter.cs
httpdns_unity_demo/Assets/Editor/: HttpDnsAdvancedUICreator.cs  HttpDnsIOSPostProcessor.cs  HttpDnsUICreator.cs  HttpDnsWindowsPostProcessor.cs
httpdns_unity_demo/Assets/Plugins/: AndroidHttpDnsHelper.cs  CHttpDnsHelper.cs  HttpDnsHelper.cs  iOSHttpDnsHelper.cs
httpdns_unity_demo/Assets/Plugins/Android/: AndroidManifest.xml  baseProjectTemplate.gradle  gradle.properties  mainTemplate.gradle  proguard-user.txt  settingsTemplate.gradle
httpdns_unity_demo/Assets/Plugins/C/Source/: CMakeLists.txt  HttpDnsUnityBridge.cpp  HttpDnsUnityBridge.h  build_windows_vcpkg.bat
httpdns_unity_demo/Assets/Plugins/C/Source/alibabacloud-httpdns-c-sdk/: CMakeLists.txt
httpdns_unity_demo/Assets/Plugins/C/x86_64/: HttpDnsUnityBridge.dll.meta.template
httpdns_unity_demo/Assets/Plugins/iOS/: HttpDnsUnityBridge.mm
httpdns_unity_demo/Assets/Scenes/: Demo.unity
httpdns_unity_demo/ProjectSettings/: ProjectSettings.asset
push_unity_demo/: .gitignore  CHANGELOG.md  README.md  push_unity_demo.slnx
push_unity_demo/Assets/: ClickHandler.cs
push_unity_demo/Assets/Editor/: PackageExporter.cs  PushUIGenerator.cs
push_unity_demo/Assets/Plugins/Android/: AndroidManifest.xml  mainTemplate.gradle  proguard-user.txt  settingsTemplate.gradle
push_unity_demo/Assets/Plugins/Android/alicloud-push/: Constant.java  MessageReceivedCallback.java  NotificationCallback.java  NotificationClickData.java  NotificationClickedWithNoActionCallback.java  NotificationOpenedCallback.java  NotificationReceivedInAppCallback.java  NotificationRemovedCallback.java  PushCallback.java  PushCommonCallback.java  PushMessageReceiver.java  PushWrapper.java  PushWrapperLog.java  ThirdPushActivity.java  ThirdPushNotificationOpenedCallback.java  UnityPushApplication.java  Utils.java
push_unity_demo/Assets/Plugins/Editor/: iOSAliyunPushPostProcessor.cs
push_unity_demo/Assets/Plugins/alicloud-push/: AndroidPushHelper.cs  PushHelper.cs  iOSPushHelper.cs
push_unity_demo/Assets/Plugins/iOS/alicloud-push/: PushHelper.h  PushHelper.mm  PushWrapper.h  PushWrapper.m  UnityAppController+AliyunPush.mm
push_unity_demo/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
(+172 files in other folders)
